# scrooge

./: .gitignore  Cargo.toml  README.md  penny.toml
entity/src/: auction.rs  bid.rs  lib.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m01_auction.rs  m02_bid.rs
processor/: Cargo.toml
processor/src/: load.rs  main.rs  ops.rs  setup.rs
trainer/: model.ipynb
trainer/models/tf/: model-no-weight-v1.h5  model-v1.h5
