[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
entity = { path = "../entity" }
figment = { version = "0.10.10", features = ["toml"] }
migration = { path = "../migration" }
polars = { version = "0.32.1", features = ["parquet", "lazy", "dynamic_groupby", "asof_join", "trigonometry"] }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
sea-orm = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
